To line 353 (352 in snapshot)
Add functionality to do cannon, the hold, pull nails from plank

--- a/TODO
+++ b/TODO
@@ -1,2 +1,4 @@
 Security doors should respond to door too.
 Certificate of insurance does nothing?
+Disc seems to be still on person after insert disc #254
+>> Foil still on player around 320... where does this go in game edited 81-82 to drop foil there
